[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
console = "0.15.8"
dialoguer = "0.11.0"
dotenv = "0.15.0"
log = "0.4.20"
once_cell = "1.19.0"
polodb_core = "4.4.0"
rand = "0.8.5"
regex = "1.10.3"
serde = "1.0.196"
simplelog = "0.12.1"
thiserror = "1.0.56"
uuid = { version = "1.3.0", features = ["v7"] }
